# orcas-desktop

./: .gitignore  CLAUDE.md  README.md  index.html  manifest  package-lock.json  package.json  plan.md
.beads/: .gitignore  config.yaml  dolt-server.activity  issues.jsonl  metadata.json  push-state.json
.claude/: settings.json
docs/: CHAT_INTERFACE_REVIEW.md  README_MCP.md  USER_FLOWS.md
src/: App.css  App.tsx  api.ts  main.tsx  (+2 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_subtask_descriptions.sql  003_placeholder_migration.sql  004_placeholder_migration.sql  005_add_task_agent_sessions.sql  006_placeholder_migration.sql  007_add_task_notes_path.sql  008_create_agent_notes_table.sql  009_add_agents_table.sql  010_add_sample_agent.sql  011_add_marketing_copywriter_agent.sql  012_add_agent_id_to_subtasks.sql  012_add_settings_table.sql  013_add_planning_agent.sql  014_update_model_names.sql  015_add_system_role_to_agents.sql  016_create_agent_edit_locks.sql  017_create_task_notes_table.sql  018_add_scheduled_date_to_tasks.sql  019_add_project_context.sql  020_rename_projects_to_spaces.sql  021_add_web_search_to_agents.sql  022_create_event_space_associations.sql  023_add_chief_of_staff_agent.sql  025_add_background_task_runs.sql
src-tauri/src/: calendar.rs  chat.rs  database.rs  edit_locks.rs  lib.rs  main.rs  planning_agent.rs  project_context.rs  settings.rs  space_context.rs  task_notes.rs
src-tauri/src/providers/: mod.rs
(+88 files in other folders)
